<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>cz.cuni.mff.d3s</groupId>
	<artifactId>TimeSeriesStatistics4J</artifactId>
	<version>1.0.0</version>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>test</testSourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.17</version>
					<configuration>
                <!-- see: https://stackoverflow.com/questions/53010200/maven-surefire-could-not-find-forkedbooter-class -->
						<argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
						<includes>
							<include>**/*Test.java</include>
						</includes>
					</configuration>
				</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.ejml</groupId>
			<artifactId>all</artifactId>
			<version>0.30</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.github.signaflo</groupId>
			<artifactId>timeseries</artifactId>
			<version>0.4</version>
		</dependency>
	</dependencies>
</project>